--- a/Lab2.vcxproj.filters
+++ b/Lab2.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="IntroSort.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ShellSortHibb.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="func.h">
