--- a/Lab2.vcxproj
+++ b/Lab2.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="ShellSort.cpp" />
     <ClCompile Include="swap.cpp" />
     <ClCompile Include="TimSort.cpp" />
+    <ClCompile Include="ShellSortHibb.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="func.h" />
